Reband of website, all pages. Wellness Warriors rebrand, to be more about the people rather than myself

--- a/about.html
+++ b/about.html
@@ -18,11 +18,16 @@
   <!-- Header -->
   <header class="bg-white shadow-sm">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex items-center justify-between">
-      <a href="index.html" class="text-2xl font-bold text-cyan-600">Logen's Wellness Journey</a>
+      <a href="index.html" class="flex items-center space-x-3">
+        <div class="text-2xl font-bold">
+          <span class="text-cyan-600">Wellness Warriors</span>
+        </div>
+        <span class="text-sm text-gray-600 border-l border-gray-300 pl-3">by Logen Dickey</span>
+      </a>
       <nav class="hidden md:flex space-x-8">
         <a href="index.html" class="text-gray-700 hover:text-cyan-600">Home</a>
-        <a href="recommendations.html" class="text-gray-700 hover:text-cyan-600">Recommendations</a>
-        <a href="about.html" class="text-gray-700 hover:text-cyan-600 font-bold">About Me</a>
+        <a href="start-your-journey.html" class="text-gray-700 hover:text-cyan-600">Start Your Journey</a>
+        <a href="about.html" class="text-gray-700 hover:text-cyan-600 font-bold">About Us</a>
       </nav>
       <button id="openMenu" class="md:hidden relative w-10 h-10 bg-gradient-to-r from-cyan-600 to-cyan-700 rounded-lg shadow-lg overflow-hidden group">
         <div class="absolute inset-0 w-full h-full flex flex-col items-center justify-center space-y-1.5 transition-transform duration-300 group-hover:scale-110">
@@ -47,8 +52,8 @@
         </div>
         <nav class="space-y-6">
           <a href="index.html" class="block text-lg text-white hover:text-cyan-200 transition-colors duration-300">Home</a>
-          <a href="recommendations.html" class="block text-lg text-white hover:text-cyan-200 transition-colors duration-300">Recommendations</a>
-          <a href="about.html" class="block text-lg text-cyan-200 font-bold transition-colors duration-300">About Me</a>
+          <a href="start-your-journey.html" class="block text-lg text-white hover:text-cyan-200 transition-colors duration-300">Start Your Journey</a>
+          <a href="about.html" class="block text-lg text-cyan-200 font-bold transition-colors duration-300">About Us</a>
         </nav>
       </div>
     </div>
@@ -58,9 +63,9 @@
   <main class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
     <!-- Hero Section -->
     <div class="text-center mb-16">
-      <h1 class="text-5xl font-bold text-gray-900 mb-6">My Wellness Journey</h1>
+      <h1 class="text-5xl font-bold text-gray-900 mb-6">The Wellness Warriors Story</h1>
       <p class="text-xl text-gray-600 max-w-3xl mx-auto">
-        From struggling with energy and focus to discovering the transformative power of gut health and proper hydration.
+        From a personal transformation to building a community dedicated to helping others discover the power of gut health and proper hydration.
       </p>
     </div>
 
@@ -71,12 +76,9 @@
         <div class="space-y-6">
           <h2 class="text-3xl font-bold text-gray-900">The Beginning</h2>
           <p class="text-gray-600">
-            My name is Logen Dickey, and when covid hit I gained over 60 pounds, lost a lot of my muscle, and struggled with energy levels and mental 
-            motivation. I had the frustrating cycle of high and low energy that went on for days, weeks, and months. This is also how I felt mentally. 
-            I never quite knew if I could stay consistent with anything and take back control of my life.
-            I would be super productive for a few weeks, then I would fall off my high horse and be back to my old habits for a few months.
-            It was a terrible cycle that I couldn't break. I tried countless supplements and diets, but nothing seemed to provide the lasting 
-            change I was looking for. 
+            My name is Logen Dickey, and when COVID hit, I gained over 60 pounds, lost significant muscle mass, and struggled with fluctuating energy levels and mental motivation. I experienced the frustrating cycle of high and low energy that persisted for days, weeks, and months. This pattern affected me both physically and mentally.
+
+            I never quite knew if I could maintain consistency with anything or take back control of my life. I would be super productive for a few weeks, then fall back into old habits for months. It was a challenging cycle that seemed impossible to break. Despite trying countless supplements and diets, nothing provided the lasting change I was seeking.
           </p>
           <div class="border-l-4 border-cyan-600 pl-6 italic text-gray-700">
             "From my first keto diet back in early 2022 to intermittent fasting, consistent exercise, 
@@ -96,11 +98,9 @@
         <div class="space-y-6 md:col-start-2">
           <h2 class="text-3xl font-bold text-gray-900">The Discovery</h2>
           <p class="text-gray-600">
-            Everything changed when I realized the crucial connection that my energy and mental levels were directly related 
-            to my gut health and hydration. It took a lot of trial and error, but I finally found a way to stay consistent with my health.
-            For the first time in my life really, I was able to stay consistent on everything from my diet, to my exercise, to my supplements.
-            My energy levels were rising, but not just one day or one week, it was every single day. My poor gut health was causing my mental 
-            state to be all over the place. Once I realized this, I knew it was time to make a change. 
+            Everything changed when I discovered the crucial connection between my energy levels, mental clarity, and gut health combined with proper hydration. Through careful experimentation and research, I finally found a sustainable approach to wellness. For the first time in my life, I maintained consistency in everything from diet to exercise and supplementation.
+
+            My energy levels weren't just improving for a day or a week—they were consistently high every single day. I realized that my poor gut health had been affecting my mental state significantly. Once I understood this connection, I knew I had found the key to lasting change.
           </p>
           <ul class="space-y-3 text-gray-600">
             <li class="flex items-center">
@@ -131,16 +131,35 @@
         </div>
       </section>
 
+      <!-- Family Support Section -->
+      <section class="grid md:grid-cols-2 gap-12 items-center mb-24">
+        <div class="relative">
+          <img src="images/FamilySupport.jpg" alt="Family Support" class="rounded-lg shadow-xl">
+          <div class="absolute -bottom-4 -right-4 bg-gradient-to-r from-cyan-600 to-cyan-700 text-white px-6 py-2 rounded-lg">
+            Family Support
+          </div>
+        </div>
+        <div class="space-y-6">
+          <h2 class="text-3xl font-bold text-gray-900">The Power of Support</h2>
+          <p class="text-gray-600">
+            One of the most significant turning points in my journey was when my father joined me on this path. Having family support not only strengthened my resolve but also validated that these changes could benefit anyone, regardless of age or background. Together, we've discovered that proper gut health and hydration can transform lives, and we're committed to sharing this knowledge with others.
+          </p>
+          <div class="border-l-4 border-cyan-600 pl-6 italic text-gray-700">
+            "Seeing my father experience the same transformative benefits I had discovered made me realize this wasn't just about personal wellness anymore—it was about creating a community where everyone could thrive together."
+          </div>
+          <p class="text-gray-600">
+            Today, we share the same mission: helping others discover their path to wellness through proper gut health and hydration. 
+            His journey alongside mine has become a testament to the power of community and support in achieving lasting wellness.
+          </p>
+        </div>
+      </section>
+
       <!-- Present Day Section -->
       <section class="grid md:grid-cols-2 gap-12 items-center">
         <div class="space-y-6">
           <h2 class="text-3xl font-bold text-gray-900">Today</h2>
           <p class="text-gray-600">
-            Now, I'm experiencing levels of energy and mental clarity that I haven't felt since my youth. 
-            Through proper gut health and hydration, I've unlocked a new chapter in my wellness journey. 
-            Of course, my mental state and clarity has been amazing as well. The best part? I'm only just getting started! 
-            This feeling is something I want to share with the world. 
-
+            Now, I'm experiencing levels of energy and mental clarity that I haven't felt since my youth. Through proper gut health and hydration, I've unlocked a new chapter in my wellness journey. My mental state and clarity have been consistently amazing, and the best part is that I'm only just getting started! This transformation is something I want to share with others who are facing similar struggles.
           </p>
           <div class="bg-gradient-to-r from-cyan-50 to-white p-6 rounded-lg border border-cyan-100">
             <h3 class="text-xl font-semibold text-gray-900 mb-3">My Daily Routine</h3>
@@ -173,9 +192,9 @@
           </div>
         </div>
         <div class="relative">
-          <img src="images/Now.jpg" alt="Present Day" class="rounded-lg shadow-xl">
+          <img src="images/healthjourneytransformation1.jpg" alt="Present Day" class="rounded-lg shadow-xl">
           <div class="absolute -bottom-4 -left-4 bg-cyan-600 text-white px-6 py-2 rounded-lg">
-            Now
+            Then : Now
           </div>
         </div>
       </section>
@@ -202,8 +221,8 @@
       <section class="mb-12 text-center">
         <h2 class="text-4xl font-bold text-gray-900 mb-6">Looking Forward</h2>
         <p class="text-xl text-gray-600 max-w-3xl mx-auto mb-12">
-          Now that I've found what works, my mission is to help others avoid the years of trial and error 
-          I went through. Here's how I plan to make a difference:
+          Together with my father and our growing community of Wellness Warriors, we're committed to helping others avoid the years of 
+          trial and error we went through. Here's how we plan to make a difference:
         </p>
       </section>
 
@@ -255,13 +274,13 @@
 
     <!-- Call to Action -->
     <section class="bg-gradient-to-r from-cyan-600 to-cyan-700 rounded-2xl p-8 md:p-12 text-white text-center">
-      <h2 class="text-3xl font-bold mb-4">Ready to Start Your Journey?</h2>
+      <h2 class="text-3xl font-bold mb-4">Join Us on This Journey</h2>
       <p class="text-cyan-100 mb-8 max-w-2xl mx-auto">
-        Join me in discovering how proper gut health and hydration can transform your life. Let me share the tools and knowledge that helped me reclaim my vitality.
+        Whether you're focusing on gut health or physical vitality, there's a path that's right for you. Let's transform lives together.
       </p>
       <div class="flex flex-col sm:flex-row gap-4 justify-center">
-        <a href="recommendations.html" class="inline-flex items-center justify-center px-6 py-3 bg-white text-cyan-600 font-semibold rounded-lg hover:bg-cyan-50 transition-colors duration-300">
-          View My Recommendations
+        <a href="start-your-journey.html" class="inline-flex items-center justify-center px-6 py-3 bg-white text-cyan-600 font-semibold rounded-lg hover:bg-cyan-50 transition-colors duration-300">
+          Start Your Journey
           <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
           </svg>
